# rust-quote-streamer

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
bins/client/: main.rs
bins/server/: main.rs
server/: Cargo.toml
server/src/: client.rs  defs.rs  errors.rs  lib.rs  quote_generator.rs  quote_server.rs  stock_quote.rs  tcp_server.rs
server/src/resouces/: tickers.txt
src/: client.rs  defs.rs  errors.rs  lib.rs  quote_generator.rs  quote_server.rs  stock_quote.rs  tcp_server.rs
