[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = ">=1.0"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
tempfile = "3.8"
serde_json = "1.0"
structopt = "0.3.26"
log = { version = "0.4.0-rc.1" }
env_logger = "0.10"

[[bin]]
name = "quote_streamer_server"
path = "bins/server/main.rs"

[[bin]]
name = "quote_streamer_client"
path = "bins/client/main.rs"
